[package]
name = "traudit"
version = "0.1.0"
edition = "2021"
authors = ["awfufu"]
description = "A reverse proxy with auditing capabilities."
license = "MIT"
repository = "https://github.com/awfufu/traudit"

[dependencies]
tokio = { version = "1", features = ["full"] }
clickhouse = { version = "0.13", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
socket2 = "0.5"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.1"
url = "2.5"
async-trait = "0.1"
time = { version = "0.3.45", features = ["serde", "macros", "formatting", "parsing"] }
serde_repr = "0.1.20"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.deb]
maintainer = "awfufu"
copyright = "2026, awfufu"
license-file = ["README.md", "4"]
extended-description = """\
A reverse proxy with auditing capabilities.
"""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/traudit", "usr/bin/", "755"],
    ["config_example.yaml", "etc/traudit/config.yaml", "644"],
    ["traudit.service", "usr/lib/systemd/system/traudit.service", "644"],
]
conf-files = ["/etc/traudit/config.yaml"]


[package.metadata.generate-rpm]
assets = [
    { source = "target/release/traudit", dest = "/usr/bin/traudit", mode = "755" },
    { source = "config_example.yaml", dest = "/etc/traudit/config.yaml", mode = "644", config = true },
    { source = "traudit.service", dest = "/usr/lib/systemd/system/traudit.service", mode = "644" },
]
