[package]
name = "traudit"
version = "0.0.3"
edition = "2021"
authors = ["awfufu"]
description = "A reverse proxy that streams audit records directly to databases."
license = "MIT"
repository = "https://github.com/awfufu/traudit"

[dependencies]
tokio = { version = "1", features = ["full"] }
clickhouse = { version = "0.14", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
socket2 = "0.6"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.1"
url = "2.5"
async-trait = "0.1"
time = { version = "0.3.45", features = ["serde", "macros", "formatting", "parsing"] }
serde_repr = "0.1.20"
pingora = { version = "0.6", features = ["lb", "openssl"] }
ipnet = { version = "2.11.0", features = ["serde"] }
httparse = "1.10.1"
openssl = { version = "0.10" }
serde_ignored = "0.1.14"
tokio-openssl = "0.6"

[features]
default = []
static-musl = ["openssl/vendored"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.deb]
maintainer = "awfufu"
copyright = "2026, awfufu"
license-file = ["README.md", "4"]
extended-description = "A reverse proxy that streams audit records directly to databases"
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/package_tmp/traudit", "usr/bin/", "755"],
    ["config_example.yaml", "etc/traudit/config.yaml", "600"],
    ["traudit.service", "usr/lib/systemd/system/traudit.service", "644"],
]
conf-files = ["/etc/traudit/config.yaml"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/package_tmp/traudit", dest = "/usr/bin/traudit", mode = "755" },
    { source = "config_example.yaml", dest = "/etc/traudit/config.yaml", mode = "600", config = "noreplace" },
    { source = "traudit.service", dest = "/usr/lib/systemd/system/traudit.service", mode = "644" },
]
